--- a/index.html
+++ b/index.html
@@ -6,10 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exploring CSS</title>
+
+    <style>
+        .box {
+            width: 100px;
+            height: 100px;
+            border: 1px solid indianred;
+        }
+
+        #box-1 {
+            background-color: khaki;
+        }
+
+        #box-2 {
+            background-color: red;
+        }
+
+        #box-3 {
+            background-color: green;
+            /* visibility: hidden; */
+            /* visibility: visible; */
+            display: block;
+            /* display: none; */
+
+        }
+
+        #box-4 {
+            background-color: blue;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>We are exploring CSS noe!</h1>
+    <h1>We are exploring CSS now!</h1>
+
+    <div class="box" id="box-1"></div>
+    <div class="box" id="box-2"></div>
+    <div class="box" id="box-3"></div>
+    <div class="box" id="box-4"></div>
 </body>
 
 </html>
