final commit for the overflow.html file

--- a/overflow.html
+++ b/overflow.html
@@ -5,9 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overflow</title>
+    <style>
+        .mega-box {
+            width: 500px;
+            height: 400px;
+            border: 5px solid steelblue;
+            /* overflow: hidden; */
+            /* overflow: scroll; */
+            /* overflow-y: scroll; */
+            overflow: scroll;
+            overflow-x: hidden;
+        }
+
+        .mango-people {
+            width: 500px;
+            height: 400px;
+            border: 5px solid brown;
+        }
+
+        .mini {
+            width: 150px;
+            border: 3px solid indianred;
+            overflow: hidden;
+        }
+
+        .shortClass {
+            white-space: nowrap;
+            overflow-x: hidden;
+            text-overflow: ellipsis;
+        }
+    </style>
 </head>
 <body>
     <h1>We are exploring CSS Overflow now!</h1>
-    
+    <div class="mini">
+        <p class="shortClass" title="If you want to get my money. send me baksh first.">If you want to get my money. send me baksh first.</p>
+    </div>
+    <div class="mega-box">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur numquam adipisci laborum in debitis ducimus, non modi quam at quos labore laudantium distinctio. Quis dolorum repudiandae error vitae nemo, illum corrupti, numquam ex, corporis magnam odio? Quibusdam mollitia quia, facilis recusandae porro consequuntur earum optio vitae dolore pariatur provident similique dicta ullam exercitationem quas aliquid magnam aut nulla rem voluptatem ipsa iure. Vero modi, esse facere voluptate vitae totam repudiandae unde eos, in dolorem at iure quidem sunt accusamus. Itaque dolorum ipsa alias officiis dolores nobis consequuntur id sint necessitatibus perferendis, asperiores, quidem recusandae beatae iste, cumque rem. Delectus ullam vitae neque porro facilis sunt tenetur architecto amet asperiores sint, quisquam culpa tempore quos ut illum laborum soluta ea corporis vel, nobis placeat excepturi quas! Nobis, sapiente consequatur fugiat voluptas iure suscipit quam laudantium asperiores quos nemo incidunt rem corrupti aliquid. Voluptate commodi soluta maxime sapiente laborum, hic, asperiores praesentium dolores reprehenderit similique recusandae aperiam quod sequi voluptates quisquam libero beatae saepe dolore? Quae, pariatur voluptatem maxime illo sunt nostrum similique eum laboriosam recusandae debitis deleniti hic tempore delectus, qui obcaecati reiciendis nisi aperiam vero accusamus a inventore ducimus laborum. Sint harum obcaecati assumenda pariatur libero et maiores iste, dolores doloremque aliquid a commodi esse ipsam nostrum dolore nisi similique? In aut quis libero aperiam. Beatae perspiciatis quaerat error nihil eum itaque, possimus cupiditate reprehenderit hic commodi natus non quas incidunt cumque autem expedita! Dignissimos odit provident recusandae. Ex laudantium porro alias asperiores dolorum dicta ducimus quibusdam, dolorem molestias corporis accusamus voluptas repellendus molestiae beatae temporibus ipsam fugiat omnis, neque quas! Aliquid nobis ullam a nam voluptas corporis, pariatur omnis reprehenderit inventore non, officiis provident excepturi neque exercitationem. Officiis numquam vero veritatis a soluta dolore, consequuntur minus placeat voluptatem totam, accusamus quis. Enim beatae dolorum voluptatum magnam veritatis nobis repudiandae facere, sapiente quae corporis architecto distinctio tempore dignissimos. Animi commodi, vel, doloribus accusantium perspiciatis nemo similique dolorem, facere recusandae alias corrupti nesciunt excepturi! Tempore voluptate natus voluptas, similique commodi magnam deserunt harum veniam dolores cum mollitia, officiis cupiditate repellat cumque velit eaque ea enim vero? Nihil, voluptate at nisi tenetur maxime cumque ea aperiam commodi corrupti, consequuntur, neque accusamus ullam porro reprehenderit a obcaecati dolorum molestiae. Numquam quia itaque error, molestias, minima ullam beatae dolor quasi exercitationem, atque temporibus? Nemo quisquam magnam porro. Officia officiis a reiciendis esse! Tempore et mollitia fuga libero quo eveniet nesciunt quaerat nemo nihil quas. Hic dicta eligendi unde neque fugit debitis. Quasi ex, iste reiciendis labore ipsam nemo, cum perferendis laboriosam cupiditate reprehenderit repellat laborum, neque voluptate necessitatibus pariatur quos facilis? Modi dolorem voluptatem suscipit porro cum nostrum laudantium quod quis labore accusamus rerum asperiores cupiditate, consectetur debitis tempora esse voluptatum quidem nobis adipisci optio voluptatibus. Deleniti aspernatur quisquam nam, minus, officia numquam cumque, voluptatum tenetur corporis nihil atque maiores voluptatibus iste mollitia at cum fugit soluta vero quis perspiciatis a repellat error. Numquam qui esse voluptas eius! Harum commodi possimus earum nisi natus enim placeat nihil, saepe debitis consequuntur totam, reprehenderit voluptate consequatur?</p>
+    </div>
+
+    <div class="mango-people">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit id, eveniet eum optio voluptates nulla ex dicta minus quisquam possimus aspernatur! Dolores tempore, dolor explicabo libero ad officiis consequatur? Officiis vel exercitationem ad aliquid ipsa a quis dolores, nulla perspiciatis. Laborum a et impedit eum nulla suscipit nam accusamus nesciunt deleniti in officiis id, necessitatibus asperiores quis cumque quos unde architecto est, modi culpa officia sint iste labore? Expedita maxime quia ratione laboriosam consequuntur eum debitis nemo assumenda earum, blanditiis dicta corporis sapiente obcaecati voluptate impedit aliquam eveniet praesentium quod reiciendis quos sit laborum! Voluptates saepe maxime, asperiores vitae suscipit beatae obcaecati excepturi quidem. Quis itaque libero doloremque? Sit fuga, nemo ipsum nostrum dolore placeat. Architecto exercitationem autem laboriosam debitis, minima fugiat odio saepe, repellat asperiores nostrum officiis distinctio esse quasi delectus, ex illum vitae velit id nisi! Voluptatibus, enim nostrum iusto dolores cupiditate deleniti beatae alias consequuntur perspiciatis sint temporibus facere non! Praesentium doloribus tempore natus maxime ducimus. Tempore consequuntur sunt doloribus labore impedit omnis modi voluptate, nisi vero autem eos magnam ullam blanditiis ut quo praesentium similique nam? Nihil adipisci minima sit pariatur vero inventore, eos ea ipsam suscipit soluta! Beatae explicabo natus aperiam nostrum, optio laborum nisi!</p>
+    </div>
 </body>
 </html>
